css/dragons.webflow.css
/* ... */
.team-member {
	width: 35%;
	margin: 3%;
	text-align: center;
}

.team-member img {
	/* border: 3px solid white;
	background-color: grey; */
	width: 80%;
	margin: 10px;
}

#reveal-countdown{ 
	font-size: 20px;
}

#balance {
	color: white;
}

#claimable{
	color: white;
}

.flashit{
	-webkit-animation: flash ease-out 8s infinite;
	-moz-animation: flash ease-out 8s infinite;
	animation: flash ease-out 8s infinite;
	animation-delay: 0s;
}

@-webkit-keyframes flash {
	from { opacity: 0; } 
  92% { opacity: 0; }
	93% { opacity: 0.6; }
  94% { opacity: 0.2; }
  96% { opacity: 0.9; } 
	to { opacity: 0; }
}

@keyframes flash {
	from { opacity: 0; } 
    92% { opacity: 0; }
	93% { opacity: 0.6; }
    94% { opacity: 0.2; }
    96% { opacity: 1; } 
	to { opacity: 0; }
}

#claim {
	padding:  10px;
}

.section-2 {
	background-position: 50% 50%;
	background-size: cover;
}

.grid-2 {
	-ms-grid-columns: 1fr;
	grid-template-columns: 1fr;
	-ms-grid-rows: auto auto auto auto;
	grid-template-rows: auto auto auto auto
}

.footer-text {
	font-size: 18px
}

.footer-text.big {
	font-size: 30px;
	line-height: 35px
}

.footer-section {
	margin: auto;
	padding: 5px;
	width: 100%;
	text-align: center;
}

.center-div {
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	margin-bottom: 50px;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-webkit-flex-direction: column;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-box-pack: center;
	-webkit-justify-content: center;
	-ms-flex-pack: center;
	justify-content: center;
	-webkit-box-align: center;
	-webkit-align-items: center;
	-ms-flex-align: center;
	align-items: center
}

.button {
	background-color: rgba(252, 48, 48, 0.836);
	color: white;
	font-size: 1.7vw;
	padding: .5vw;
	font-family: 'Wayfarer';
}

#mint-button, #connect-button {
	width: 33%;
}

#mint-button {
	height: 4vw;
}

.link {
	color: rgba(252, 48, 48, 0.836);
	text-decoration: none
}

.button:hover {
	background-color: rgb(245, 199, 199);
}

.link:hover {
	color: rgb(245, 199, 199);
}

.active {
	color: rgb(245, 199, 199);
}

.section-title{
	font-size:  2.3vw;
	text-align: center;
}

h2 {
	font-size:  1.9vw;
	line-height:  1.9vw;
}

h4 {
	font-size:  1.4vw;
	line-height:  1.4vw;
}

.grid-3 {
	justify-items: center;
	-webkit-box-align: center;
	-webkit-align-items: center;
	-ms-flex-align: center;
	align-items: center;
	-ms-grid-columns: 1fr 1fr 1fr;
	grid-template-columns: 1fr 1fr 1fr;
	-ms-grid-rows: auto;
	grid-template-rows: auto
}

.grid-4 {
	-ms-grid-columns: 1fr 1fr 1fr;
	grid-template-columns: 1fr 1fr 1fr;
	-ms-grid-rows: auto;
	grid-template-rows: auto
}

.image-show {
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-webkit-flex-direction: column;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-box-align: center;
	-webkit-align-items: center;
	-ms-flex-align: center;
	align-items: center
}

.div-block {
	padding-top: 5px;
	padding-right: 15px;
	padding-left: 15px;
	background-color: hsla(0, 0%, 100%, .21);
	opacity: 1
}

.banner-img {
	width: 100%;
}

#title-name {
	margin-top: 10vh;
	text-align: center;
	font-size: 17vh;
	margin-bottom: 5vh;
	line-height: 17vh;
	color: #eded78;
	text-shadow: 6px 7px #795a23, 0 1px 7px black, 1px 0 black, 0 -1px black;
}

#title-footer{
	text-align: center;
	font-size: 5vh;
	margin-bottom: 10vh;
	line-height: 5vh;
	color: #eded78;
	text-shadow: 6px 7px #795a23, 0 1px 7px black, 1px 0 black, 0 -1px black;
}

.show-image {
	margin-bottom: 10px;
}


#pending-transactions {
    text-align: center;
    min-width: 20%;
    position: fixed;
    bottom: 20px;
    left: 20px;
    z-index: 99999999;
  }
  
.loading-div {
    cursor: pointer;
    width: 100%;
    text-decoration: none;
    height: 5%;
	background-color: rgba(95, 92, 92);
    border: solid white .3em;
    color: white;
    font-size: .8vw;
    line-height: 1.1vw;
    padding: 20px;
    text-align: center;
}

.etherscan-link {
    text-decoration: none;
}

#error-popup, #status-popup {
	background-color: rgba(95, 92, 92);
    z-index: 99999;
    position:fixed;
    top:50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 53vw;
    height: 35vh;
    border: solid .3em white;
    border-radius: .2em;
    text-align: center;
    box-shadow: 0 0 5000px 5000px rgba(0,0,0,0.88);
}

#error-popup p, #status-popup p {
    width: 100%;
    font-size: 3vw;
    line-height: 3vw;
    position: absolute;
    color: white;
    top: 50%;
    left: 50%;
	padding: 1vw;
    transform: translate(-50%, -50%);
    text-align: center;
}

@keyframes blinker {
    50% {
      opacity: 0;
    }
}

.blinking {
    animation: blinker 1.6s linear infinite;
}

.success {
    background-color: rgb(49, 219, 49) !important;
	color: black !important;
}

.failure {
    background-color: #F72119 !important;
}

#block-screen, #block-screen-error, #block-screen-status, #block-screen-approval {
    z-index: 9998;
    width: 100vw;
    opacity: 0;
    position: absolute;
    top: 0;
}


@media screen and (max-width: 1000px) {

	.grid {
	    grid-template-areas:
	        "Area Area"
	        "Area-2 Area-2"
	        "Area-3 Area-3";
	    -ms-grid-columns: 1fr 1fr;
	    grid-template-columns: 1fr 1fr;
	    -ms-grid-rows: auto auto auto;
	    grid-template-rows: auto auto auto;
	    text-align: center;
	}

	.banner-img3 {
		margin-top: 13vh;
	}

	.gradiant{
	  background:rgba(255, 255, 255, 0) linear-gradient(to bottom, rgba(0, 0, 0, 0) 10%, rgb(0 0 0 / 10%) 40%, rgb(0 0 0 / 50%) 75%, rgb(0 0 0) 100%) repeat scroll 0 0;
	  position: relative;
	  margin-top: -200px;
	  height: 200px;
	  width:  100%;
	}

	.banner-img3 {
		margin-top: 13vh;
	}

	#roadmap, #team, #inner-roadmap, #faq {
		padding: 5px;
	}

	.footer-section {
		margin: auto;
		padding: 5px;
		width: 100%;
		text-align: center;
	}

	.fall {
		visibility: hidden;
	}
}
/* ... */

